PyCuAmpcor: fixed a typo in corrSurface

--- a/contrib/PyCuAmpcor/README.ipynb
+++ b/contrib/PyCuAmpcor/README.ipynb
@@ -247,7 +247,7 @@
     "| PyCuAmpcor          | CUDA variable       | ampcor.F equivalent   | Notes                     |\n",
     "| :---                | :---                | :----                 | :---                      | \n",
     "| rawDataOversamplingFactor | rawDataOversamplingFactor | i_ovs=2   | the oversampling factor for reference and secondary windows, use 2 for InSAR SLCs. | \n",
-    "| derampMethod        | derampMethod        | 1 or no effect on TOPS | 0=TOPS, 1=deramping (default), else=skip deramping.  \n",
+    "| derampMethod        | derampMethod        | 1 or no effect on TOPS | 0=mag for TOPS, 1=deramping (default), else=skip deramping.  \n",
     "\n",
     "\n",
     "**Difference to ROIPAC**\n",
@@ -296,15 +296,8 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "## 3. Examples\n",
-    "\n",
-    "### 3.1 \n",
-    "\n",
-    "\n",
-    "(Additional notes- TBD)\n",
     "  \n",
-    "## 4. Sinc Interpolator/Oversampler  \n",
+    "## 3. Sinc Interpolator/Oversampler  \n",
     "  \n",
     " \n",
     "The sinc interpolator formula is defined as   \n",
